--- a/src/App.css
+++ b/src/App.css
@@ -20,67 +20,65 @@
   height: 100%;
   grid-template-columns: repeat(21, 1fr);
   grid-template-rows: repeat(60, 1fr);
-  grid-template-areas:
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1 box-1"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-2 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-3 box-9 box-9 box-9 box-9 box-9"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-9 box-9 box-9 box-9 box-9"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-9 box-9 box-9 box-9 box-9"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-9 box-9 box-9 box-9 box-9"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-10 box-10 box-10 box-10 box-10"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-10 box-10 box-10 box-10 box-10"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-10 box-10 box-10 box-10 box-10"
-    "box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-4 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-5 box-10 box-10 box-10 box-10 box-10"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-10 box-10 box-10 box-10 box-10"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-10 box-10 box-10 box-10 box-10"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-6 box-11 box-11 box-11 box-11 box-11"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-11 box-11 box-11 box-11 box-11"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-11 box-11 box-11 box-11 box-11"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-7 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12"
-    "box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-8 box-12 box-12 box-12 box-12 box-12";
+}
+  
+.resume-front > .box-1 {
+  grid-column: 1 / span 21;
+  grid-row: 1 / span 7;
+}
+
+.resume-front > .box-2 {
+  grid-column: 1 / span 16;
+  grid-row: 8 / span 7;
+}
+
+.resume-front > .box-3 {
+  grid-column: 1 / span 16;
+  grid-row: 15 / span 7;
+}
+
+.resume-front > .box-4 {
+  grid-column: 1 / span 16;
+  grid-row: 22 / span 7;
+}
+
+.resume-front > .box-5 {
+  grid-column: 1 / span 16;
+  grid-row: 29 / span 6;
+}
+.resume-front > .box-6 {
+  grid-column: 1 / span 16;
+  grid-row: 35 / span 11;
+}
+
+.resume-front > .box-7 {
+  grid-column: 1 / span 16;
+  grid-row: 46 / span 8;
+}
+
+.resume-front > .box-8 {
+  grid-column: 1 / span 16;
+  grid-row: 54 / span 7;
+}
+
+.resume-front > .box-9 {
+  grid-column: 17 / span 5;
+  grid-row: 8 / span 17;
+}
+
+.resume-front > .box-10 {
+  grid-column: 17 / span 5;
+  grid-row: 25 / span 12;
+}
+
+.resume-front > .box-11 {
+  grid-column: 17 / span 5;
+  grid-row: 37 / span 11;
+}
+
+.resume-front > .box-12 {
+  grid-column: 17 / span 5;
+  grid-row: 48 / span 13;
 }
 
 .sheet-wrapper {
