--- a/src/App.css
+++ b/src/App.css
@@ -611,9 +611,19 @@
   grid-row: 39 / span 6;
   margin: 0;
   overflow: hidden;
+
+  background-color: rgba(2, 83, 34, 0.52);
+  background-image: linear-gradient(
+    180deg,
+    rgba(2, 83, 34, 0) 0%,
+    rgba(2, 83, 34, 0.6) 50%,
+    rgba(2, 83, 34, 0) 100%
+  );
+  backdrop-filter: blur(5px); /* Blurs the content behind this element */
 }
 .sheet-overlay .overlay-item .hobbies-section {
   font-size: var(--text-lg);
+  text-transform: uppercase;
   margin: 0;
   padding: 0;
   display: inline-flex;
@@ -621,18 +631,20 @@
   width: 100%;
 }
 .sheet-overlay .overlay-item .hobbies-section h3 {
+  opacity: 0.9;
   font-size: var(--text-4xl);
   flex: 0 0 100%;
   text-align: center;
   margin: 0 var(--space-12) 0 0;
-  animation: hobbyHeaderFlash 1s ease infinite, hobbyHeaderScroll 35s linear infinite;
+  animation: hobbyHeaderFlash 1s ease infinite,
+    hobbyHeaderScroll 35s linear infinite;
 }
 /* Make the inner DIV the single-row track */
 .sheet-overlay .overlay-item .hobbies-section > div {
-  display: flex;            
+  display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;        
-  white-space: nowrap;      
+  flex-wrap: nowrap;
+  white-space: nowrap;
   gap: var(--space-12);
   margin: 0;
   padding: 0;
@@ -641,32 +653,83 @@
   animation: hobbyScroll 35s linear infinite;
 }
 .sheet-overlay .overlay-item .hobbies-section > div p {
+  opacity: 0.9;
   margin: 0;
   max-width: none;
 }
 
+/* Battery progress meter */
+.sheet-overlay .overlay-box-12 {
+  animation: none; /* Disable animation for battery box */
+  grid-column: 30 / span 6;
+  grid-row: 46 / span 18;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+}
+
+.sheet-overlay .overlay-box-12 .battery {
+  scale: 0.8;
+  padding: 6px;
+  margin: 0;
+  rotate: 180deg;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(12, 1fr);
+  background: #000000;
+  position: relative;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+.sheet-overlay .overlay-box-12 .battery .battery-segment {
+  border-radius: 10px;
+  background: #00a94128;
+  border: #000000 solid 1px;
+}
+.sheet-overlay .overlay-box-12 .battery .battery-segment.charged {
+  background: #00a941;
+  box-shadow: 0 0 4px #00a941;
+  border: #000000 solid 1px;
+}
+
+.sheet-overlay .overlay-box-12 ::before {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 12px;
+  background-color: #333333;
+  border-radius: 0 0 4px 4px;
+}
+
 @keyframes hobbyHeaderScroll {
-    0%, 85% {
-      scale: 0;
-    }
-    /* Rush onto the grid quickly */
-    86% {
-      scale: 1;
-    }
-    /* Hold visible on the grid */
-    99% {
-      scale: 1;
-    }
-    100% {
-      scale: 0;
-    }
-  
+  0%,
+  85% {
+    scale: 0;
+  }
+  /* Rush onto the grid quickly */
+  86% {
+    scale: 1;
+  }
+  /* Hold visible on the grid */
+  99% {
+    scale: 1;
+  }
+  100% {
+    scale: 0;
+  }
 }
 
 @keyframes hobbyHeaderFlash {
   0%,
   100% {
-    filter: brightness(.5);
+    filter: brightness(0.5);
   }
   50% {
     filter: brightness(2);
