--- a/src/App.css
+++ b/src/App.css
@@ -725,11 +725,39 @@
   display: grid;
   grid-column: 32 / span 4;
   grid-row: 50 / span 15;
-  background: transparent;
+  /* background: transparent; */
   padding: 0;
   margin: 0;
   overflow: visible;
 }
+
+.sheet-overlay .overlay-box-12 .battery .battery-cover {
+  position: absolute;
+  rotate: 180deg;
+  top: -35px;
+  left: -22px;
+  width: 166px;
+  height: 305px;
+  background-repeat: no-repeat;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.sheet-overlay .overlay-box-12 .battery .battery-cover.cover-animating.cover-open {
+  animation: batteryCoverSlide 2s steps(13) forwards;
+  animation-direction: normal;
+}
+.sheet-overlay .overlay-box-12 .battery .battery-cover.cover-animating.cover-closed {
+  animation: batteryCoverSlide 2s steps(13) forwards;
+  animation-direction: reverse;
+}
+.sheet-overlay .overlay-box-12 .battery .battery-cover.cover-open {
+  background-position: -2158px 0;
+}
+.sheet-overlay .overlay-box-12 .battery .battery-cover.cover-closed {
+  background-position: 0 0;
+}
+
 
 .sheet-overlay .overlay-box-12 .battery {
   scale: 1;
@@ -812,6 +840,11 @@
   grid-row: 50 / -1;
   margin: 0;
   overflow: hidden;
+}
+
+@keyframes batteryCoverSlide {
+  from { background-position: 0 0; }
+  to   { background-position: -2158px 0; }
 }
 
 @keyframes batteryChargePulse {
